# authelia-controller

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  docker-bake.hcl  rust-toolchain.toml
.gitea/workflows/: build.yaml
manifests/: cluster-role-binding.yaml  cluster-role.yaml  deployment.yaml  kustomization.yaml  service-account.yaml
src/: context.rs  lib.rs  main.rs
src/resources/: access_control_rule.rs  mod.rs
yaml/: rule-test-1.yaml  rule-test-2.yaml  rule-test-3.yaml
