[package]
name = "authelia-controller"
edition = "2024"

default-run = "authelia-controller"

[dependencies]
color-eyre = "0.6.3"
dotenvy = "0.15.7"
futures-util = "0.3.31"
git-version = "0.3.9"
k8s-openapi = { version = "0.24.0", features = ["v1_31"] }
kube = { version = "0.99.0", features = ["derive", "runtime"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }
