[package]
name = "authelia-controller"
edition = "2024"

default-run = "authelia-controller"

[dependencies]
color-eyre = "0.6.5"
dotenvy = "0.15.7"
futures-util = "0.3.31"
git-version = "0.3.9"
k8s-openapi = { version = "0.26.1", features = ["v1_34"] }
kube = { version = "2.0.1", features = ["derive", "runtime"] }
schemars = "1.1.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
